--- a/14_microservicio_crud_alumnos_token_jwt/src/main/resources/application.properties
+++ b/14_microservicio_crud_alumnos_token_jwt/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.servlet.context-path=/crud_alumnos
+clave=1234
