--- a/19_microservicio_seguimiento_actividad/src/main/resources/application.properties
+++ b/19_microservicio_seguimiento_actividad/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port=9000
+server.servlet.context-path=/seguimiento
 clave=1234
