--- a/26_servidor_configuracion/src/main/resources/application.yml
+++ b/26_servidor_configuracion/src/main/resources/application.yml
@@ -2,15 +2,14 @@ server:
   port: 8888
 
 spring:
-  #profiles:
-   # active:
-   # - native
+  profiles:
+    active:
+    - native
   cloud:
     config:
       server:
-        git:
-          uri:  #https://github.com/amartinsierra66/configuracion_microservicios
-          
-       # native:
-       #   search-locations:
-       #   - file:///c:\temp\config
+        #git:
+         # uri:  #https://github.com/amartinsierra66/configuracion_microservicios          
+        native:
+          search-locations:
+          - file:///c:\temp\config
