--- a/06_microservicio_crud_alumnos/src/main/resources/application.properties
+++ b/06_microservicio_crud_alumnos/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/academia?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://${IP_DATA}:${PORT_DATA}/academia?serverTimezone=UTC
+spring.datasource.username=${USER_DATA}
+spring.datasource.password=${PWD_DATA}
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.servlet.context-path=/crud_alumnos
+server.port=${PORT}
